--- a/index.html
+++ b/index.html
@@ -5,24 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+
     <title>Cronômetro</title>
 </head>
 <body>
-    <div class="div1">
-        <div class="parag">
-            <h1>Cronômetro</h1>
-        </div>
-        <div class="mostrador">
-            <span>00</span>
-            <span>:</span>
-            <span>00</span>
-        </div>
-        <div class="buttons">
-            <button>Start</button>
-            <button>Stop</button>
-            <button>Reset</button>
-        </div>
-    </div>    
+    <form name="form_main"> 
+        <div class="div1">
+            <div class="parag">
+                <h1>Cronômetro</h1>
+            </div>
+            <div class="mostrador">
+                <span id="hour">00</span>
+                <span>:</span>
+                <span id="minute">00</span>
+                <span>:</span>
+                <span id="second">00</span>
+                <span>:</span>
+                <span id="millisecond">000</span>
+            </div>
+            <div class="buttons">
+                <button type="button" name="start">Start</button>
+                <button type="button" name="pause">Pause</button>
+                <button type="button" name="reset">Reset</button>
+            </div>
+        </div>   
+    </form> 
     <script src="script.js"></script>
 </body>
 </html>
